Extend library documentation.